; ModuleID = '/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_xdomain.c_tb_unregister_property_dir.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_xdomain.c_tb_unregister_property_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tb_property_dir = type { i32 }

@xdomain_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tb_unregister_property_dir(i8* %0, %struct.tb_property_dir* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tb_property_dir*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.tb_property_dir* %1, %struct.tb_property_dir** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = call i32 @mutex_lock(i32* @xdomain_lock)
  %7 = load i8*, i8** %3, align 8
  %8 = load %struct.tb_property_dir*, %struct.tb_property_dir** %4, align 8
  %9 = call i64 @remove_directory(i8* %7, %struct.tb_property_dir* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 (...) @rebuild_property_block()
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %11, %2
  %14 = call i32 @mutex_unlock(i32* @xdomain_lock)
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %13
  %18 = call i32 (...) @update_all_xdomains()
  br label %19

19:                                               ; preds = %17, %13
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @remove_directory(i8*, %struct.tb_property_dir*) #1

declare dso_local i32 @rebuild_property_block(...) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @update_all_xdomains(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
